--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,14 @@
     <meta charset="utf-8">
 
     <title>Placeholder</title>
-    <script src="placeholder.js"></script>
+    <script src="placeholdercanvas.js"></script>
 </head>
 
 <body>
-    <h1>Placeholder example</h1>
-    <img data-place="/f35.png" height="408px">
-    <p>Text</p>
+<h1>Placeholder example</h1>
+<img data-src="f35.png" style="width:500px;">
+
+<p>Text</p>
 </body>
 
 </html>
