--- a/gui/frontend/src/app.html
+++ b/gui/frontend/src/app.html
@@ -3,7 +3,18 @@
     </div>
     <div id="files">
         <div id="upload">
-            <button type="button" id="select">+</button>
+            <button type="button" class="select"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20">
+                    <path d="M-4-2h24v24H-4V-2z" fill="none" />
+                    <path
+                            d="M10,0H2C0.9,0,0,0.9,0,2v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V6L10,0z M14,18H2V2h7v5h5V18z" />
+                </svg>
+            </button><button type="button" class="select">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 16">
+                    <path d="M-2-4h24v24H-2V-4z" fill="none" />
+                    <path
+                            d="M18,2h-8L8,0H2C0.9,0,0,0.9,0,2l0,12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V4C20,2.9,19.1,2,18,2z M18,14H2V4h16V14z" />
+                </svg>
+            </button>
         </div>
         <div id="list">
             <p id="help">Add files or folders to get started</p>
@@ -19,23 +30,23 @@
             <div class="inputbox">
                 <div class="inputgroup">
                     <label>Points</label>
-                    <input type="number" class="input" value="600" min="0" step="1"></input>
+                    <input id="points" type="number" class="input" value="600" min="0" step="1"></input>
                 </div>
             </div>
             <div class="inputbox">
                 <div class="inputgroup">
                     <label>Max time</label>
-                    <input type="number" class="input" value="0" min="0" step="1"></input>
+                    <input id="maxtime" type="number" class="input" value="0" min="0" step="1"></input>
                 </div>
             </div>
             <div class="inputbox">
                 <div class="inputgroup">
                     <label>Max size</label>
-                    <input type="number" class="input" value="0" min="0" step="1"></input>
+                    <input id="maxsize" type="number" class="input" value="0" min="0" step="1"></input>
                 </div>
             </div>
             <div id="updatebox">
-                <button id="update">Update</button>
+                <button id="start">Start</button>
             </div>
         </div>
     </div>
