--- a/gui/frontend/src/app.html
+++ b/gui/frontend/src/app.html
@@ -1,5 +1,8 @@
 <div id="container">
     <div id="info">
+        <div id="renderContainer">
+            <canvas id="render"></canvas>
+        </div>
     </div>
     <div id="files">
         <div id="upload">
