--- a/gui/frontend/src/app.html
+++ b/gui/frontend/src/app.html
@@ -1,10 +1,10 @@
 <div id="container">
-    <div id="info">
+    <div id="info" class="noselect">
         <div id="renderContainer">
             <canvas id="render"></canvas>
         </div>
     </div>
-    <div id="files">
+    <div id="files" class="noselect">
         <div id="upload">
             <button type="button" class="select"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20">
                     <path d="M-4-2h24v24H-4V-2z" fill="none" />
